--- a/SpelVerzameling/SpelVerzameling.csproj
+++ b/SpelVerzameling/SpelVerzameling.csproj
@@ -115,6 +115,7 @@
     <Content Include="Default.aspx" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="GameCollectieOverzicht.aspx" />
     <Content Include="GameCollectieOverzichtscherm.html" />
     <Content Include="Global.asax" />
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
@@ -184,6 +185,13 @@
     </Compile>
     <Compile Include="Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="GameCollectieOverzicht.aspx.cs">
+      <DependentUpon>GameCollectieOverzicht.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="GameCollectieOverzicht.aspx.designer.cs">
+      <DependentUpon>GameCollectieOverzicht.aspx</DependentUpon>
     </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
